[package]
name = "project-zero-twitter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
feed-rs = "1.4.0"
regex = "1.10.4"
reqwest = "0.12"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
twitter-v2 = "0.1.8"
